traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur()==true){
    ^Snake:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^Snake:20: error: '(' expected but '}' found.
  } 
  ^